--- a/src/index.html
+++ b/src/index.html
@@ -30,16 +30,17 @@
                 </ul>
               </li>
               <li class="thickWrapper">
-                <span>粗细</span
-                ><label
-                  ><input
+                <span>粗细</span>
+                <label>
+                  <input
                     class="thickness"
                     type="number"
                     name="thickness"
                     value="10"
                     step="1"
                     min="1"
-                    max="50"
+                    max="100"
+                    pattern="[0-9]*"
                 /></label>
               </li>
             </ul>
